fixed spacing between footer and bottom of page

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ footer {
   justify-content: center;
   background-color: black;
   width: 100%;
-  margin: 50px 0px;
+  margin: 0px 0px;
 }
 footer p {
   color: white;
